# pmpp

./: .clang-format  .clangd  .gitignore  CLAUDE.md  dune  readme.md
.zed/: settings.json
__notes/: notes.md
__template/: dune  kernel.cu  main.c  main.cu
ch01_grayscale/: dune  kernel.cu  main.c  main.cu  main_cuda.c
ch03/1_greyscale/: dune
ch03/3_blur_local/: dune  kernel.cu  main.c
ch03/greyscale/: main.c  main_cuda.c
ch05/1_shared-memory-experiments/: dune  kernel.cu  main.c
lux/cpu/: dune  lux_cpu.c  lux_cpu.h  main.c
lux/gpu/: dune  kernel.cu  main.c
lux/shared/: dune  lux.h  lux_priv.c  lux_priv.h
shared/: cuda_helpers.c  cuda_helpers.h
shared/cuda_stubs/: texture_fetch_functions.h
