(rule
 (targets main.exe)
 (deps main.c ../shared/cuda_helpers.h)
 (action
  (run gcc -O2
       -I /usr/local/cuda-13.0/include
       -L /usr/local/cuda-13.0/lib64
       -Wl,-rpath,/usr/local/cuda-13.0/lib64
       -o %{targets} main.c
       -lcuda -lnvrtc)))

(rule
 (alias run)
 (deps main.exe kernel.cu)
 (action
  (run ./main.exe kernel.cu)))
