(rule
 (targets main.exe)
 (deps main.c (glob_files ../../shared/*) (glob_files ../../stb/*))
 (action
  (run gcc -O2
       -I /usr/local/cuda-13.0/include
       -L /usr/local/cuda-13.0/lib64
       -Wl,-rpath,/usr/local/cuda-13.0/lib64
       -o %{targets} main.c ../../shared/cuda_helpers.c
       -lcuda -lnvrtc -lm)))

(rule
  (targets output.png)
  (deps main.exe kernel.cu checkerboard.png)
  (mode promote)
  (action (run %{deps} %{targets} )))
