;; TODO: fix all this

(rule
 (alias lint)
 (deps
  kernel.cu
  (glob_files ../../shared/cuda_stubs/*))
 (action
  (run
   clang-20
   --cuda-device-only
   --cuda-gpu-arch=sm_89
   --cuda-path=/usr/local/cuda
   -I
   ../../shared/cuda_stubs
   -fsyntax-only
   -Weverything
   -Wno-c++98-compat
   -Wno-c++98-compat-pedantic
   -Wno-unknown-cuda-version
   -Wno-missing-prototypes
   -Wno-unused-parameter
   -Wno-old-style-cast
   -Wno-unsafe-buffer-usage
   -Werror
   kernel.cu)))
